@@ -5,7 +5,6 @@ common :
 pmk :
 + update pmk.1
 + update pmkfile.5
-	(VARIABLE in CHECK_CONFIG, CFLAGS in CHECK_HEADER, LIBS in CHECK_LIB)
 ! define CFLAGS, LIBS, LDFLAGS with values from make
 + CHECK_LIB should set LIBS and need a LIBS option
 	(check with a glob da_idx(da, i)+"lib"+libname+".*")
