@@ -103,6 +103,7 @@
 #define PMKCONF_BIN_AR		"BIN_AR"
 #define PMKCONF_BIN_AWK		"BIN_AWK"
 #define PMKCONF_BIN_CAT		"BIN_CAT"
+#define PMKCONF_BIN_CC		"BIN_CC"
 #define PMKCONF_BIN_CPP		"BIN_CPP"
 #define PMKCONF_BIN_CXX		"BIN_CXX"
 #define PMKCONF_BIN_EGREP	"BIN_EGREP"
